increase surefire mem size